--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,11 @@
     <packaging>pom</packaging>
     <version>0.1.0</version>
     
-    <modules></modules>
-    
+    <modules>
+        <module>especialistas-back</module>
+        <module>especialistas-web</module>
+    </modules>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
