--- a/especialistas-web/bower.json
+++ b/especialistas-web/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontstepbystep",
+  "name": "especialistas",
   "license": "MIT",
   "version": "1.0.0",
   "main": "src/main/webapp/index.html",
