--- a/especialistas-web/pom.xml
+++ b/especialistas-web/pom.xml
@@ -99,4 +99,7 @@
             </plugin>
         </plugins>
     </build>
+      <properties>
+    <additionalparam>-Xdoclint:none</additionalparam>
+  </properties>
 </project>
