--- a/especialistas-web/bower.json
+++ b/especialistas-web/bower.json
@@ -8,7 +8,8 @@
     "angular": "angularjs#^1.6.4",
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^0.13.4",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "uikit": "^3"
   },
   "overrides": {
     "bootstrap": {
