--- a/especialistas-web/pom.xml
+++ b/especialistas-web/pom.xml
@@ -1,105 +1,97 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>especialistas-web</artifactId>
-    <name>especialistas-web</name>
-    <packaging>war</packaging>
-    <parent>
-        <groupId>co.edu.uniandes.csw.especialistas</groupId>
-        <artifactId>especialistas</artifactId>
-        <version>0.1.0</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-    <licenses>
-        <license>
-            <name>MIT License</name>
-            <comments>See file LICENSE</comments>
-        </license>
-    </licenses>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-drone-bom</artifactId>
-                <version>2.0.0.Final</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.selenium</groupId>
-                <artifactId>selenium-bom</artifactId>
-                <version>2.53.1</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.5.1</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>2.4</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.5.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.5.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>co.edu.uniandes.csw.especialistas</groupId>
-            <artifactId>especialistas-back</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.graphene</groupId>
-            <artifactId>graphene-webdriver</artifactId>
-            <version>2.1.0.Final</version>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+     <modelVersion>4.0.0</modelVersion>
+     <groupId>co.edu.uniandes.csw.especialistas</groupId>
+     <artifactId>especialistas</artifactId>
+     <name>especialistas</name>
+      <packaging>pom</packaging>
+      <version>0.1.0</version>
+      
+     <modules>
+         <module>especialistas-back</module>
+         <module>especialistas-web</module>
+     </modules>
+  
       <properties>
-    <additionalparam>-Xdoclint:none</additionalparam>
-  </properties>
-</project>
+          <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <sonar.host.url>http://157.253.238.75:9000</sonar.host.url>
+         <sonar.sourceEncoding>${project.build.sourceEncoding}</sonar.sourceEncoding>
+         <sonar.exclusions>src/main/webapp/bower_components/**</sonar.exclusions>
+         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+     </properties>
+     
+     <dependencyManagement>
+         <dependencies>
+             <dependency>
+                 <groupId>org.jboss.arquillian</groupId>
+                 <artifactId>arquillian-bom</artifactId>
+                 <version>1.1.11.Final</version>
+                 <type>pom</type>
+                 <scope>import</scope>
+             </dependency>
+             <dependency>
+                 <groupId>org.eclipse.persistence</groupId>
+                 <artifactId>org.eclipse.persistence.moxy</artifactId>
+                 <version>2.6.1</version>
+             </dependency>
+         </dependencies>
+     </dependencyManagement>
+     <dependencies>
+         <dependency>
+             <groupId>junit</groupId>
+             <artifactId>junit</artifactId>
+             <version>4.12</version>
+             <scope>test</scope>
+         </dependency>
+         <dependency>
+             <groupId>org.jboss.arquillian.junit</groupId>
+             <artifactId>arquillian-junit-container</artifactId>
+             <scope>test</scope>
+         </dependency>
+         <dependency>
+             <groupId>org.glassfish.main.extras</groupId>
+             <artifactId>glassfish-embedded-all</artifactId>
+             <version>4.1</version>
+             <scope>test</scope>
+         </dependency>
+         <dependency>
+             <groupId>org.jboss.arquillian.container</groupId>
+             <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
+             <version>1.0.0.CR4</version>
+             <scope>test</scope>
+         </dependency>
+         <dependency>
+             <groupId>uk.co.jemos.podam</groupId>
+             <artifactId>podam</artifactId>
+             <version>6.0.2.RELEASE</version>
+         </dependency>
+ 		<dependency>
+               <groupId>org.jboss.shrinkwrap.resolver</groupId>
+               <artifactId>shrinkwrap-resolver-depchain</artifactId>
+               <scope>test</scope>
+               <type>pom</type>
+          </dependency>
+     </dependencies>
+     <build>
+         <plugins>
+             <plugin>
+                 <groupId>org.jacoco</groupId>
+                 <artifactId>jacoco-maven-plugin</artifactId>
+                 <version>0.7.6.201602180812</version>
+                 <executions>
+                     <execution>
+                         <goals>
+                            <goal>prepare-agent</goal>
+                            <goal>prepare-agent-integration</goal>
+                            <goal>report</goal>
+                            <goal>report-integration</goal>
+                         </goals>
+                     </execution>
+                 </executions>
+             </plugin>
+         </plugins>
+     </build>
+ </project>
