--- a/especialistas-web/bower.json
+++ b/especialistas-web/bower.json
@@ -8,7 +8,8 @@
     "bootstrap": "^3.3.7",
     "angular-bootstrap": "^0.13.4",  
     "jquery": "^3.2.1",
-    "uikit": "^3",  
+    "uikit": "^3",
+    "angular-breadcrumb": "^0",
     "angular": "angularjs#^1.6.4", 
     "angular": "^1.5.0",
     "google-maps-utility-library-v3-markerwithlabel": "1.1.10",
